--- a/.github/workflows/systems-release.yml
+++ b/.github/workflows/systems-release.yml
@@ -1,4 +1,4 @@
-name: Release
+name: Systems Release
 
 on:
   release:
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
-      SENTRY_DSN: ${{secrets.EDITOR_SENTRY_DSN}}
+      SENTRY_DSN: ${{ secrets.EDITOR_SENTRY_DSN  }}
     timeout-minutes: 30
     permissions:
       contents: read
@@ -60,7 +60,7 @@ jobs:
     timeout-minutes: 720
     env:
       SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN}}
-      SENTRY_DSN: ${{secrets.RCE_SENTRY_DSN}}
+      SENTRY_DSN: ${{ secrets.RCE_SENTRY_DSN  }}
     permissions:
       contents: read
       packages: write
