--- a/editor/package.json
+++ b/editor/package.json
@@ -56,6 +56,7 @@
     "engines": {
         "node": ">=20"
     },
+    "engineStrict": true,
     "name": "@carai/editor",
     "private": true,
     "scripts": {
@@ -67,5 +68,6 @@
         "fmt:check": "prettier --check ."
     },
     "type": "module",
-    "version": "0.0.1"
+    "version": "0.0.1",
+    "packageManager": "pnpm@8.11.0+sha1.01bf39424f1008f29012bbae851d2acb8a20a0d0"
 }
