--- a/rce/package.json
+++ b/rce/package.json
@@ -8,6 +8,7 @@
 	},
 	"description": "RCE module",
 	"devDependencies": {
+		"@sentry/esbuild-plugin": "^2.21.1",
 		"@types/node": "^20.14.9",
 		"@types/polka": "^0.5.7",
 		"@typescript-eslint/eslint-plugin": "^7.14.1",
@@ -18,8 +19,7 @@
 		"eslint": "^8.56.0",
 		"ts-node": "^10.9.2",
 		"typescript": "^5.5.2",
-		"vitest": "^1.6.0",
-		"@sentry/esbuild-plugin": "^2.20.1"
+		"vitest": "^1.6.0"
 	},
 	"engineStrict": true,
 	"engines": {
