--- a/.github/workflows/systems-release.yml
+++ b/.github/workflows/systems-release.yml
@@ -1,9 +1,10 @@
 name: Systems Release
 
 on:
-  registry_package:
+  workflow_run:
+    workflows: ["Systems Nightly"]
     types:
-      - published
+      - completed
   workflow_dispatch:
 
 env:
@@ -11,12 +12,34 @@ env:
   IMAGE_NAME: ${{ github.repository }}
 
 jobs:
-  editor:
-    name: Editor
+  paths-filter:
+    name: Paths Filter
     runs-on: ubuntu-latest
+    outputs:
+      editor: ${{ steps.changes.outputs.editor }}
+      rce: ${{ steps.changes.outputs.rce }}
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Check for changes in paths
+        uses: dorny/paths-filter@v3
+        id: changes
+        with:
+          filters: |
+            editor:
+              - 'editor/**'
+            rce:
+              - 'rce/**'
+
+  build-editor:
+    name: Build Editor
+    runs-on: ubuntu-latest
+    needs: paths-filter
+    if: needs.paths-filter.outputs.editor == 'true'
     env:
       SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
-      SENTRY_DSN: ${{ secrets.EDITOR_SENTRY_DSN  }}
+      SENTRY_DSN: ${{ secrets.EDITOR_SENTRY_DSN }}
     timeout-minutes: 30
     permissions:
       contents: read
@@ -47,20 +70,22 @@ jobs:
             type=sha
 
       - name: Build and push Docker image
-        uses: docker/build-push-action@v4
+        uses: docker/build-push-action@v6
         with:
           context: "{{defaultContext}}:editor"
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
 
-  rce:
-    name: RCE
+  build-rce:
+    name: Build RCE
     runs-on: ubuntu-latest
+    needs: paths-filter
+    if: needs.paths-filter.outputs.rce == 'true'
     timeout-minutes: 720
     env:
-      SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN  }}
       SENTRY_DSN: ${{ secrets.RCE_SENTRY_DSN  }}
+      SENTRY_AUTH_TOKEN: ${{  secrets.SENTRY_AUTH_TOKEN }}
     permissions:
       contents: read
       packages: write
