fix: linting error

--- a/editor/package.json
+++ b/editor/package.json
@@ -64,7 +64,7 @@
         "build": "next build",
         "start": "next start",
         "lint": "eslint . --ext .ts,.tsx -c .eslintrc.json --fix",
-        "fmt:write": "prettier --write .",
+        "fmt:write": "pnpm run lint && prettier --write .",
         "fmt:check": "prettier --check ."
     },
     "type": "module",
