--- a/editor/.eslintrc.json
+++ b/editor/.eslintrc.json
@@ -1,10 +1,6 @@
 {
-    "extends": [
-        "next/core-web-vitals",
-        "plugin:prettier/recommended",
-        "prettier"
-    ],
-    "plugins": ["@typescript-eslint", "unused-imports"],
+    "extends": ["next/core-web-vitals", "plugin:prettier/recommended"],
+    "plugins": ["@typescript-eslint", "unused-imports", "prettier"],
     "rules": {
         "@typescript-eslint/no-unused-vars": [
             "warn",
@@ -60,7 +56,7 @@
             }
         ],
         "prettier/prettier": "warn",
-        "react-hooks/exhaustive-deps": "off",
+        "react-hooks/exhaustive-deps": "warn",
         "react/jsx-sort-props": [
             "warn",
             {
