--- a/editor/package.json
+++ b/editor/package.json
@@ -15,7 +15,8 @@
         "@react-aria/visually-hidden": "3.8.12",
         "@reduxjs/toolkit": "^2.2.6",
         "@sentry/nextjs": "^8.19.0",
-        "ace-builds": "^1.35.3",
+        "@uiw/codemirror-extensions-langs": "^4.23.0",
+        "@uiw/react-codemirror": "^4.23.0",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
         "lucide-react": "^0.408.0",
@@ -23,7 +24,6 @@
         "next": "14.2.5",
         "next-themes": "^0.3.0",
         "react": "^18.3.1",
-        "react-ace": "^12.0.0",
         "react-dom": "^18.3.1",
         "react-hot-toast": "^2.4.1",
         "react-icons": "^5.2.1",
@@ -32,11 +32,13 @@
         "redux-persist": "^6.0.0"
     },
     "devDependencies": {
+        "@codemirror/language": "^6.10.2",
         "@tailwindcss/typography": "^0.5.13",
         "@types/node": "^20.14.11",
         "@types/react": "^18.3.3",
         "@types/react-dom": "^18.3.0",
         "@typescript-eslint/eslint-plugin": "^7.16.1",
+        "@uiw/codemirror-theme-vscode": "^4.23.0",
         "autoprefixer": "^10.4.19",
         "cross-env": "^7.0.3",
         "eslint": "^8.57.0",
