--- a/.github/workflows/systems-release.yml
+++ b/.github/workflows/systems-release.yml
@@ -26,6 +26,7 @@ jobs:
         uses: dorny/paths-filter@v3
         id: changes
         with:
+          base: 'master'
           filters: |
             editor:
               - 'editor/**'
