--- a/.gitignore
+++ b/.gitignore
@@ -1,85 +1,42 @@
-### dotenv ###
-.env
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-### Linux ###
-*~
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+.yarn/install-state.gz
 
-# temporary files which can be created if a process still has a handle open of a deleted file
-.fuse_hidden*
+# testing
+/coverage
 
-# KDE directory preferences
-.directory
+# next.js
+/.next/
+/out/
 
-# Linux trash folder which might appear on any partition or disk
-.Trash-*
+# production
+/build
 
-# .nfs files are created when an open file is removed but is still being accessed
-.nfs*
-
-### macOS ###
-# General
+# misc
 .DS_Store
-.AppleDouble
-.LSOverride
+*.pem
 
-# Icon must end with two \r
-Icon
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
+# local env files
+.env*.local
 
-# Thumbnails
-._*
+# vercel
+.vercel
 
-# Files that might appear in the root of a volume
-.DocumentRevisions-V100
-.fseventsd
-.Spotlight-V100
-.TemporaryItems
-.Trashes
-.VolumeIcon.icns
-.com.apple.timemachine.donotpresent
+# typescript
+*.tsbuildinfo
+next-env.d.ts
 
-# Directories potentially created on remote AFP share
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
+# Sentry Config File
+.env.sentry-build-plugin
 
-### macOS Patch ###
-# iCloud generated files
-*.icloud
-
-### Windows ###
-# Windows thumbnail cache files
-Thumbs.db
-Thumbs.db:encryptable
-ehthumbs.db
-ehthumbs_vista.db
-
-# Dump file
-*.stackdump
-
-# Folder config file
-[Dd]esktop.ini
-
-# Recycle Bin used on file shares
-$RECYCLE.BIN/
-
-# Windows Installer files
-*.cab
-*.msi
-*.msix
-*.msm
-*.msp
-
-# Windows shortcuts
-*.lnk
-
-# JetBrains
-.idea/*
-
-# Visual Studio Code
-.vscode/*
-
-docker-compose.yml
-main.cjs
+# Sentry Config File
+.env.sentry-build-plugin
