--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -17,8 +17,12 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v4
+            - name: Setup pnpm
+            - uses: pnpm/action-setup@v4
+              with:
+                  version: latest
             - name: Install Vercel CLI
-              run: npm install --global vercel@latest
+              run: pnpm add -G vercel@latest
             - name: Pull Vercel Environment Information
               run: vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN }}
             - name: Build Project Artifacts
