--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -17,8 +17,10 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v4
-            - name: Install Vercel CLI
-              run: npm install --global vercel@latest
+            - name: Setup pnpm
+            - uses: pnpm/action-setup@v4
+              with:
+                  version: latest
             - name: Pull Vercel Environment Information
               run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
             - name: Build Project Artifacts
