--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -21,6 +21,8 @@ jobs:
             - uses: pnpm/action-setup@v4
               with:
                   version: latest
+            - name: Install Vercel CLI
+              run: pnpm add -G vercel@latest
             - name: Pull Vercel Environment Information
               run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
             - name: Build Project Artifacts
