--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -8,10 +8,7 @@ on:
     push:
         branches:
             - master
-permissions:
-    contents: read
-    pull-requests: write
-    issues: write
+    workflow_dispatch: {}
 jobs:
     Deploy-Production:
         runs-on: ubuntu-latest
