chore: Update Vercel deployment workflows to use pnpm for package installation

--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -1,28 +1,41 @@
 name: Vercel Production Deployment
+
+on:
+    push:
+        branches:
+            - master
+
+    workflow_dispatch: {}
+
+permissions:
+    contents: read
+
 env:
     VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
     VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
     SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
     SENTRY_DSN: ${{ secrets.SENTRY_DSN }}
-on:
-    push:
-        branches:
-            - master
-    workflow_dispatch: {}
+
 jobs:
     Deploy-Production:
         runs-on: ubuntu-latest
         steps:
-            - uses: actions/checkout@v4
+            - name: Checkout Repository
+              uses: actions/checkout@v4
+
             - name: Setup pnpm
-            - uses: pnpm/action-setup@v4
+              uses: pnpm/action-setup@v4
               with:
                   version: latest
+
             - name: Install Vercel CLI
               run: pnpm add -G vercel@latest
+
             - name: Pull Vercel Environment Information
               run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
+
             - name: Build Project Artifacts
               run: vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
+
             - name: Deploy Project Artifacts to Vercel
               run: vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
