--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -26,7 +26,7 @@ jobs:
             - name: Setup pnpm
               uses: pnpm/action-setup@v4
               with:
-                  version: latest
+                  version: 9.9.0
 
             - name: Install Vercel CLI
               run: pnpm add -G vercel@latest
