--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -27,7 +27,7 @@ jobs:
               uses: pnpm/action-setup@v4
 
             - name: Install Vercel CLI
-              run: pnpm add -G vercel@latest
+              run: pnpm add -g vercel@latest
 
             - name: Pull Vercel Environment Information
               run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
