feat: Add @vercel/speed-insights package for performance monitoring

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "@uiw/react-codemirror": "^4.23.0",
         "@upstash/ratelimit": "^2.0.1",
         "@vercel/kv": "^2.0.0",
+        "@vercel/speed-insights": "^1.0.12",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
         "lucide-react": "^0.408.0",
