--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "@uiw/codemirror-theme-vscode": "^4.23.0",
         "@uiw/react-codemirror": "^4.23.0",
         "@upstash/ratelimit": "^2.0.1",
+        "@vercel/analytics": "^1.3.1",
         "@vercel/kv": "^2.0.0",
         "@vercel/speed-insights": "^1.0.12",
         "class-variance-authority": "^0.7.0",
