--- a/package.json
+++ b/package.json
@@ -13,15 +13,20 @@
     "dependencies": {
         "@monaco-editor/react": "^4.6.0",
         "@nextui-org/button": "2.0.34",
+        "@nextui-org/chip": "^2.0.32",
         "@nextui-org/input": "2.2.2",
+        "@nextui-org/kbd": "^2.0.33",
         "@nextui-org/navbar": "2.0.33",
         "@nextui-org/switch": "2.0.31",
         "@nextui-org/system": "^2.2.5",
+        "@nextui-org/table": "^2.0.39",
+        "@nextui-org/tabs": "^2.0.35",
         "@nextui-org/theme": "2.2.5",
         "@nextui-org/tooltip": "^2.0.39",
         "@radix-ui/react-dialog": "^1.1.1",
         "@radix-ui/react-label": "^2.1.0",
         "@radix-ui/react-radio-group": "^1.2.0",
+        "@radix-ui/react-scroll-area": "^1.1.0",
         "@react-aria/ssr": "3.9.4",
         "@react-aria/visually-hidden": "3.8.12",
         "@reduxjs/toolkit": "^2.2.7",
