--- a/web/.github/workflows/production.yml
+++ b/web/.github/workflows/production.yml
@@ -4,11 +4,11 @@ on:
     push:
         branches:
             - master
-
     workflow_dispatch: {}
 
 permissions:
     contents: read
+    packages: write
 
 env:
     VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
@@ -37,3 +37,8 @@ jobs:
 
             - name: Deploy Project Artifacts to Vercel
               run: vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
+
+            - name: Semantic Release
+              uses: cycjimmy/semantic-release-action@v4
+              env:
+                  GH_TOKEN: ${{ secrets.GH_TOKEN }}
