chore: pinned Node.js version to 20.11.0 and package manager for consistency

--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -19,6 +19,8 @@ env:
 jobs:
   Deploy-Production:
     runs-on: ubuntu-latest
+    container: node:20.11.0
+    timeout-minutes: 30
     defaults:
       run:
         working-directory: ./web
@@ -28,8 +30,6 @@ jobs:
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
-        with:
-          package_json_file: "./web/package.json"
 
       - name: Install Vercel CLI
         run: pnpm add -g vercel@latest
@@ -46,4 +46,4 @@ jobs:
       - name: Semantic Release
         uses: cycjimmy/semantic-release-action@v4
         env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          GIHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
