--- a/web/package.json
+++ b/web/package.json
@@ -57,7 +57,7 @@
     },
     "devDependencies": {
         "@tailwindcss/typography": "^0.5.14",
-        "@types/node": "^20.14.11",
+        "@types/node": "20.11.0",
         "@types/react": "^18.3.3",
         "@types/react-dom": "^18.3.0",
         "@types/react-syntax-highlighter": "15.5.13",
@@ -83,6 +83,16 @@
         "typescript": "5.4.5",
         "vercel": "^37.2.1"
     },
-    "packageManager": "pnpm@9.9.0+sha512.60c18acd138bff695d339be6ad13f7e936eea6745660d4cc4a776d5247c540d0edee1a563695c183a66eb917ef88f2b4feb1fc25f32a7adcadc7aaf3438e99c1",
-    "repository": "https://github.com/xosnrdev/carai.git"
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/xosnrdev/carai.git"
+    },
+    "license": "MIT",
+    "packageManager": "pnpm@9.10.0+sha512.73a29afa36a0d092ece5271de5177ecbf8318d454ecd701343131b8ebc0c1a91c487da46ab77c8e596d6acf1461e3594ced4becedf8921b074fbd8653ed7051c",
+    "engines": {
+        "node": ">=20.11.0",
+        "pnpm": ">=9.10.0",
+        "yarn": "Please use pnpm",
+        "npm": "Please use pnpm"
+    }
 }
