Refactor: ci working directory

--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -21,17 +21,15 @@ jobs:
     runs-on: ubuntu-latest
     container: node:20.11.0
     timeout-minutes: 30
-    defaults:
-      run:
-        working-directory: ./web
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
+      - name: Set Working Directory
+        run: cd web
+
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
-        with:
-          package_json_file: ./web/package.json
 
       - name: Install Vercel CLI
         run: pnpm add -g vercel@latest
