--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -15,26 +15,22 @@ env:
   VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
   SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
   SENTRY_DSN: ${{ secrets.SENTRY_DSN }}
+  NODE_ENV: production
 
 jobs:
   Deploy-Production:
     runs-on: ubuntu-latest
     container: node:20.11.0
     timeout-minutes: 30
-    container: node:20.11.0
-    timeout-minutes: 30
-    defaults:
-      run:
-        working-directory: ./web
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
+      - name: Set Working Directory
+        run: cd web
+
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
-        with:
-          package_json_file: ./web/package.json
-          package_json_file: ./web/package.json
 
       - name: Install Vercel CLI
         run: pnpm add -g vercel@latest
@@ -51,4 +47,6 @@ jobs:
       - name: Semantic Release
         uses: cycjimmy/semantic-release-action@v4
         env:
-          GIHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GIHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+        with:
+          working_directory: ./web
