--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -12,6 +12,7 @@ on:
 permissions:
   contents: read
   packages: write
+  deployments: write
 
 env:
   VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
@@ -48,6 +49,13 @@ jobs:
 
       - name: Deploy Project Artifacts to Vercel
         run: vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
+
+  Release:
+    runs-on: ubuntu-latest
+    needs: Deploy-Production
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
 
       - name: Semantic Release
         uses: cycjimmy/semantic-release-action@v4
