--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -8,9 +8,10 @@ on:
   workflow_dispatch: {}
 
 permissions:
-  contents: read
-  packages: write
+  contents: write
   deployments: write
+  issues: write
+  pull-requests: write
 
 env:
   VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
@@ -51,12 +52,13 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
-        with:
-          persist-credentials: false
 
       - name: Semantic Release
         uses: cycjimmy/semantic-release-action@v4
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN}}
         with:
-          working_directory: ./web
+          dry_run: false
+          extra_plugins: |
+            @semantic-release/git
+            @semantic-release/changelog
