ci: fix Missing `package.json` file.

--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -62,3 +62,4 @@ jobs:
           extra_plugins: |
             @semantic-release/git
             @semantic-release/changelog
+          working_directory: ./web
