--- a/web/package.json
+++ b/web/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "carai-web",
+    "name": "web",
     "version": "1.0.0",
     "private": true,
     "scripts": {
@@ -13,11 +13,13 @@
     },
     "dependencies": {
         "@monaco-editor/react": "^4.6.0",
+        "@nextui-org/avatar": "2.0.33",
         "@nextui-org/button": "2.0.34",
         "@nextui-org/chip": "^2.0.32",
         "@nextui-org/input": "2.2.2",
         "@nextui-org/kbd": "^2.0.33",
         "@nextui-org/navbar": "2.0.33",
+        "@nextui-org/select": "2.2.7",
         "@nextui-org/switch": "2.0.31",
         "@nextui-org/system": "^2.2.5",
         "@nextui-org/table": "^2.0.39",
