--- a/auth/Cargo.toml
+++ b/auth/Cargo.toml
@@ -12,7 +12,9 @@ path = "src/main.rs"
 name = "auth"
 
 [dependencies]
-axum = "0.7.6"
+actix-rt = "2.10.0"
+actix-web = "4.9.0"
+anyhow = "1.0.89"
 sqlx = { version = "0.8.2", default-features = false, features = [
     "runtime-tokio-rustls",
     "macros",
@@ -21,3 +23,9 @@ sqlx = { version = "0.8.2", default-features = false, features = [
     "chrono",
     "migrate",
 ] }
+tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
+tracing = "0.1.40"
+tracing-actix-web = "0.7.12"
+tracing-bunyan-formatter = "0.3.9"
+tracing-log = "0.2.0"
+tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
