--- a/rce-worker/package.json
+++ b/rce-worker/package.json
@@ -8,14 +8,14 @@
         "start": "wrangler dev",
         "cf-typegen": "wrangler types"
     },
-    "devDependencies": {
-        "@cloudflare/workers-types": "^4.20241022.0",
-        "wrangler": "^3.84.1"
-    },
     "packageManager": "pnpm@9.12.3+sha512.cce0f9de9c5a7c95bef944169cc5dfe8741abfb145078c0d508b868056848a87c81e626246cb60967cbd7fd29a6c062ef73ff840d96b3c86c40ac92cf4a813ee",
     "engines": {
         "node": ">=20.11.0",
         "yarn": "Please use pnpm",
         "npm": "Please use pnpm"
+    },
+    "devDependencies": {
+        "@cloudflare/workers-types": "4.20241112.0",
+        "wrangler": "3.88.0"
     }
 }
