Refactor: Experimenting pnpm workspace wildcard

--- a/web/package.json
+++ b/web/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@carai/web",
-    "version": "1.0.0",
+    "version": "workspace:*",
     "private": true,
     "scripts": {
         "dev": "next dev",
