--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "carai",
-    "version": "1.0.0",
+    "version": "1.0.1-0",
     "private": true,
     "scripts": {
         "fmt": "biome format --write .",
