--- a/client/web/package.json
+++ b/client/web/package.json
@@ -37,10 +37,6 @@
         "@react-aria/visually-hidden": "3.8.17",
         "@reduxjs/toolkit": "2.3.0",
         "@sentry/nextjs": "8.39.0",
-        "@upstash/ratelimit": "2.0.4",
-        "@vercel/analytics": "1.4.1",
-        "@vercel/kv": "3.0.0",
-        "@vercel/speed-insights": "1.1.0",
         "class-variance-authority": "0.7.0",
         "clsx": "2.1.1",
         "framer-motion": "11.11.17",
@@ -70,7 +66,6 @@
         "tailwind-merge": "2.5.4",
         "tailwind-variants": "0.3.0",
         "tailwindcss": "3.4.15",
-        "tailwindcss-animate": "1.0.7",
-        "vercel": "39.1.0"
+        "tailwindcss-animate": "1.0.7"
     }
 }
