--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,10 @@
         "check": "biome check --write .",
         "fix": "biome check --fix .",
         "prepare": "husky",
-        "release": "release-it"
+        "release": "release-it",
+        "build": "NODE_ENV=production pnpm --filter web build",
+        "dev": "pnpm --filter web dev",
+        "start": "pnpm --filter web start"
     },
     "devDependencies": {
         "@biomejs/biome": "1.9.4",
