--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -3,12 +3,12 @@ services:
     image: postgres:13.16-bookworm
     container_name: postgres
     environment:
-      POSTGRES_USER: $DATABASE_USERNAME
-      POSTGRES_PASSWORD: $DATABASE_PASSWORD
-      POSTGRES_DB: $DATABASE_NAME
+      POSTGRES_USER: $APP__DATABASE_USERNAME
+      POSTGRES_PASSWORD: $APP__DATABASE_PASSWORD
+      POSTGRES_DB: $APP__DATABASE_NAME
     ports:
-      - target: $DATABASE_PORT
-        published: $DATABASE_PORT
+      - target: $APP__DATABASE_PORT
+        published: $APP__DATABASE_PORT
         protocol: tcp
         mode: host
 
@@ -16,7 +16,7 @@ services:
     image: redis:bookworm
     container_name: redis
     ports:
-      - target: $REDIS_PORT
-        published: $REDIS_PORT
+      - target: $APP__REDIS_PORT
+        published: $APP__REDIS_PORT
         protocol: tcp
         mode: host
