--- a/server/.env.example
+++ b/server/.env.example
@@ -1,40 +1,40 @@
 # SERVER CONFIGURATION
-APP__SERVER_HOST=
-APP__SERVER_PORT=
-APP__SERVER_WORKERS=
+APP_SERVER_HOST=
+APP_SERVER_PORT=
+APP_SERVER_WORKERS=
 
 # DATABASE CONFIGURATION
 DATABASE_URL=postgres://anon:anon123@localhost:5432/anonymous
-APP__DATABASE_USERNAME=anonymous
-APP__DATABASE_PASSWORD=anon123
-APP__DATABASE_HOST=127.0.0.1
-APP__DATABASE_PORT=5432
-APP__DATABASE_NAME=anonymous
-APP__DATABASE_SSL_MODE=disable
+APP_DATABASE_USERNAME=anon
+APP_DATABASE_PASSWORD=anon123
+APP_DATABASE_HOST=127.0.0.1
+APP_DATABASE_PORT=5432
+APP_DATABASE_NAME=anonymous
+APP_DATABASE_SSL_MODE=disable
 
 # EVIRONMENT CONFIGURATION
-APP__ENVIRONMENT=development
+APP_ENVIRONMENT=development
 
 # JWT CONFIGURATION
-APP__JWT_SIGNING_KEY=
-APP__JWT_ACCESS_TOKEN_EXPIRATION=
-APP__JWT_REFRESH_TOKEN_EXPIRATION=
-APP__JWT_SIGNING_ALGORITHM=
+APP_JWT_SIGNING_KEY=
+APP_JWT_ACCESS_TOKEN_EXPIRATION=
+APP_JWT_REFRESH_TOKEN_EXPIRATION=
+APP_JWT_SIGNING_ALGORITHM=
 
 # REDIS CONFIGURATION
-APP__REDIS_USERNAME=
-APP__REDIS_PASSWORD=
-APP__REDIS_HOST=
-APP__REDIS_PORT=6379
-APP__REDIS_DB=
-APP__REDIS_TLS_MODE=
+APP_REDIS_USERNAME=
+APP_REDIS_PASSWORD=
+APP_REDIS_HOST=
+APP_REDIS_PORT=6379
+APP_REDIS_DB=
+APP_REDIS_TLS_MODE=
 
 # RATE LIMIT CONFIGURATION
-APP__REQUESTS_PER_WINDOW=
-APP__WINDOW_SIZE=
-APP__ERROR_MESSAGE=
-APP__REDIS_URI=
-APP__KEY_STRATEGY=
+APP_REQUESTS_PER_WINDOW=
+APP_WINDOW_SIZE=
+APP_ERROR_MESSAGE=
+APP_REDIS_URI=
+APP_KEY_STRATEGY=
 
 # RUST CONFIGURATION
 RUST_LOG=debug
