--- a/server/.env.example
+++ b/server/.env.example
@@ -1,40 +1,39 @@
 # SERVER CONFIGURATION
-APP_SERVER_HOST=
-APP_SERVER_PORT=
-APP_SERVER_WORKERS=
+APP__SERVER__HOST=
+APP__SERVER__PORT=
+APP__SERVER__TIMEOUT_IN_SECS=
+APP__SERVER__ORIGINS=
 
 # DATABASE CONFIGURATION
 DATABASE_URL=postgres://anon:anon123@localhost:5432/anonymous
-APP_DATABASE_USERNAME=anon
-APP_DATABASE_PASSWORD=anon123
-APP_DATABASE_HOST=127.0.0.1
-APP_DATABASE_PORT=5432
-APP_DATABASE_NAME=anonymous
-APP_DATABASE_SSL_MODE=disable
+APP__DATABASE__USERNAME=anon
+APP__DATABASE__PASSWORD=anon123
+APP__DATABASE__HOST=127.0.0.1
+APP__DATABASE__PORT=5432
+APP__DATABASE__NAME=anonymous
+APP__DATABASE__SSL_MODE=disable
 
 # EVIRONMENT CONFIGURATION
-APP_ENVIRONMENT=development
+APP__ENVIRONMENT=local
 
 # JWT CONFIGURATION
-APP_JWT_SIGNING_KEY=
-APP_JWT_ACCESS_TOKEN_EXPIRATION=
-APP_JWT_REFRESH_TOKEN_EXPIRATION=
-APP_JWT_SIGNING_ALGORITHM=
+APP__JWT__SECRET=
+APP__JWT__ACCESS_TOKEN_EXPIRATION_IN_SECS=
+APP__JWT__REFRESH_TOKEN_EXPIRATION_IN_SECS=
 
 # REDIS CONFIGURATION
-APP_REDIS_USERNAME=
-APP_REDIS_PASSWORD=
-APP_REDIS_HOST=
-APP_REDIS_PORT=6379
-APP_REDIS_DB=
-APP_REDIS_TLS_MODE=
+APP__REDIS__USERNAME=
+APP__REDIS__PASSWORD=
+APP__REDIS__HOST=
+APP__REDIS__PORT=6379
+APP__REDIS__DB=
+APP__REDIS__TLS_MODE=
 
 # RATE LIMIT CONFIGURATION
-APP_REQUESTS_PER_WINDOW=
-APP_WINDOW_SIZE=
-APP_ERROR_MESSAGE=
-APP_REDIS_URI=
-APP_KEY_STRATEGY=
+APP__RATE_LIMIT__REQUESTS_PER_WINDOW=
+APP__RATE_LIMIT__WINDOW_SIZE=
+APP__RATE_LIMIT__REDIS_URI=
+APP__RATE_LIMIT__KEY_STRATEGY=token
 
 # RUST CONFIGURATION
 RUST_LOG=debug
