chore(dependencies): update Cargo.lock and Cargo.toml for new packages and features
- Added new dependencies: `aead`, `aes`, `aes-gcm`, `cipher`, `cookie`, `ctr`, `ghash`, `inout`, `opaque-debug`, `polyval`, `universal-hash`.
- Updated `Cargo.toml` to include `time` and modified `axum-extra` features to include `cookie-private`.
- Enhanced dependency management for improved security and functionality in the project.

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -18,7 +18,7 @@ name = "carai"
 anyhow = "1.0.94"
 argon2 = "0.5.3"
 axum = { version = "0.7.9", features = ["tracing"] }
-axum-extra = { version = "0.9.6", features = ["typed-header"] }
+axum-extra = { version = "0.9.6", features = ["cookie", "typed-header", "cookie-private"] }
 chrono = { version = "0.4.38", default-features = false, features = [
   "clock",
   "serde",
@@ -39,6 +39,7 @@ sqlx = { version = "0.8.2", default-features = false, features = [
   "chrono",
   "migrate",
 ] }
+time = "0.3.37"
 tokio = { version = "1.42.0", features = ["full"] }
 tower-http = { version = "0.6.2", features = ["cors", "timeout", "trace"] }
 tracing = "0.1.41"
