--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -24,13 +24,12 @@ chrono = { version = "0.4.38", default-features = false, features = [
   "serde",
 ] }
 config = "0.14.1"
-derive_more = { version = "1.0.0", features = ["from", "try_from", "display"] }
+derive_more = { version = "1.0.0", features = ["try_from", "display"] }
 dotenv = "0.15.0"
 getset = "0.1.3"
 jsonwebtoken = "9.3.0"
 redis = "0.27.5"
 serde = { version = "1.0.210", features = ["derive"] }
-smart-default = "0.7.1"
 sqlx = { version = "0.8.2", default-features = false, features = [
   "runtime-tokio-rustls",
   "macros",
