test(health_check): add unit test for health check endpoint
- Introduced a new test for the health check endpoint to verify it returns a 200 OK status.
- Utilized the `TestContext` for database setup and cleanup during the test execution.
- Ensured the health check functionality is validated within the test suite.

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -53,3 +53,6 @@ opt-level = "z"
 codegen-units = 1
 panic = "abort"
 strip = true
+
+[dev-dependencies]
+tower = { version = "0.5.2", features = ["util"] }
