--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,18 +1,27 @@
-name: CI
+name: ci
 
 on:
   push:
     branches:
       - master
   pull_request:
+    types: [opened, synchronize, reopened]
+    branches:
+      - master
+  schedule:
+    - cron: "00 01 * * *"
   workflow_dispatch:
 
 permissions:
   contents: read
 
+env:
+  SQLX_VERSION: 0.8.2
+  SQLX_FEATURES: "rustls,postgres"
+  RUST_BACKTRACE: 1
+
 jobs:
   test:
-    name: Test
     defaults:
       run:
         working-directory: server
@@ -32,8 +41,8 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Install latest Rust toolchain
-        uses: actions-rust-lang/setup-rust-toolchain@v1
+      - name: Install Rust
+        uses: dtolnay/rust-toolchain@master
         with:
           toolchain: stable
 
@@ -47,7 +56,68 @@ jobs:
             sleep 5
           done
 
-      - name: Run tests
+      - name: Install sqlx-cli
+        run: |
+          cargo install sqlx-cli --version ${{ env.SQLX_VERSION }} --features ${{ env.SQLX_FEATURES }} --no-default-features --locked
+
+      - name: Migrate, Prepare and Test
         env:
           DATABASE_URL: postgres://${{ secrets.TEST_DB_USERNAME }}:${{ secrets.TEST_DB_PASSWORD }}@localhost:5432/anonymous
-        run: cargo test
+          TEST_DB_USERNAME: ${{ secrets.TEST_DB_USERNAME }}
+          TEST_DB_PASSWORD: ${{ secrets.TEST_DB_PASSWORD }}
+        run: |
+          cargo sqlx migrate run
+          cargo sqlx prepare
+          cargo test
+
+  rustfmt:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: server
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      - name: Install Rust
+        uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: stable
+          components: rustfmt
+      - name: Check formatting
+        run: cargo fmt --all --check
+
+  clippy:
+    defaults:
+      run:
+        working-directory: server
+    runs-on: ubuntu-latest
+    env:
+      SQLX_OFFLINE: true
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Install Rust
+        uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: stable
+          components: clippy
+      - name: Run clippy
+        run: cargo clippy -- -D warnings
+
+  docs:
+    defaults:
+      run:
+        working-directory: server
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      - name: Install Rust
+        uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: stable
+      - name: Check documentation
+        env:
+          RUSTDOCFLAGS: -D warnings
+        run: cargo doc --no-deps --document-private-items
