fix(client): update Dockerfile for production environment
- Copy public assets from the build stage.
- Set NODE_ENV to production.

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -12,9 +12,12 @@ WORKDIR /app
 
 COPY --from=build /app/web/.next/standalone/ .
 
+COPY --from=build /app/web/public/ ./web/public/
+
 COPY --from=build /app/web/.next/static/ ./web/.next/static/
 
 ENV HOSTNAME=0.0.0.0
+ENV NODE_ENV=production
 
 EXPOSE 3000
 
