--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -28,7 +28,6 @@ derive_more = { version = "1.0.0", features = ["try_from", "display"] }
 dotenv = "0.15.0"
 getset = "0.1.3"
 jsonwebtoken = "9.3.0"
-redis = "0.27.5"
 serde = { version = "1.0.210", features = ["derive"] }
 sqlx = { version = "0.8.2", default-features = false, features = [
   "runtime-tokio-rustls",
@@ -40,9 +39,11 @@ sqlx = { version = "0.8.2", default-features = false, features = [
 ] }
 time = "0.3.37"
 tokio = { version = "1.42.0", features = ["full"] }
+
+tower = { version = "0.5.2", features = ["buffer", "limit", "util"] }
 tower-http = { version = "0.6.2", features = ["cors", "timeout", "trace"] }
 tracing = "0.1.41"
-tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
+tracing-subscriber = { version = "0.3.19", features = ["env-filter", "time"] }
 
 uuid = { version = "1.10.0", features = ["v4", "serde"] }
 validator = { version = "0.18.1", features = ["derive"] }
@@ -55,4 +56,6 @@ panic = "abort"
 strip = true
 
 [dev-dependencies]
-tower = { version = "0.5.2", features = ["util"] }
+serde_json = "1.0.133"
+testcontainers = { version = "0.23.1", features = ["blocking"] }
+testcontainers-modules = { version = "0.11.4", features = ["postgres"] }
